# SUSTech-CS217

./: .clangd  .gitignore  bool.cpp  char.S  char.cpp  conversion.cpp  default_op.cpp  enum.cpp  fft.cpp  firstclass.cpp  float.cpp  goto.cpp  hello.cpp  index_bound.cpp  init_char.cpp  int_init.S  int_init.c  main.cpp  memoryleak.S  memoryleak.c  mytime.cpp  myvector.cpp  ptr_alloc.cpp  reparent.c  size.cpp  t.c  t.cpp  temp.cpp  w2_execer.cpp
demo/: lib.h  main.S  main.cpp
lab01/: add.cpp  add.h  main.S  main.cpp  p1.cpp
lab02/: p1.cpp  p2.cpp  p3.cpp  p4.cpp  p5.cpp
lab03/: factorial.cpp  main.cpp  p1.sh  p3.cpp  p4_1.cpp  p4_2.cpp  p5.cpp
lab03/p1/: functions.h  main.cpp  printhello.cpp
lab04/: p2.cpp  p3.cpp  p4.cpp
lab04/exercise4/: fib.cpp  fib.hpp  main.cpp
lab04/p1/: CMakeLists.txt
lab04/p1/src/: functions.cpp  main.cpp
lab05/: p1.cpp  p2.cpp  p3.cpp
lab05/p3/: CMakeLists.txt  main.cpp  stuinfo.cpp  stuinfo.hpp
lab06/: p1.cpp  p3.S  p3.asm  p3.cpp
lab06/swap_demo/: main.cpp
lab06/swap_demo/lib/: swap.cpp  swap.h
lab07/: p2.cpp
lab07/p1/: CMakeLists.txt  main.cpp
lab07/p1/lib/: CMakeLists.txt  libvabs.cpp  libvabs.hpp
lab08/: main.c
lab09/: p1.cpp  p2.cpp  p3.cpp
lab10/: complex.h  main.cpp  rational.cpp  rational.h
lab11/: matrix.cpp  p1.cpp  p3.cpp
lab12/: p1.cpp  p2.cpp  p3.cpp
lab12/numth/: Cargo.toml
lab12/numth/src/: lib.rs
lab12/p4/: Cargo.toml
lab12/prime/: Cargo.toml
lab12/prime/src/: main.rs
lab13/: p1.cpp  p2.cpp  p3.cpp
lab13/p1/: Cargo.toml
lab13/p1/src/: main.rs
lab13/p2/: Cargo.toml
lab13/p2/src/: main.cpp  main.rs
lab13/p3/: Cargo.toml
lab13/p3/src/: main.rs
lab14/: p2.cpp
project1/: CMakeLists.txt  cli.c  error.h  main.c  math.c  math.h  parser.c  shell.c  shell.h  submission_ver.c  t.cpp  test_error.cpp  test_main.sh  test_math.sh  util.h
project1/src/: error.h  main.c  math.c  math.h  shell.c  util.c  util.h
project1/test/: error.h  math.c  math.h  test_math.c  test_math.sh  test_mul.cpp  test_mul.sh  util.h
project2/: CMakeLists.txt  Cargo.toml  Makefile  main.c  matrix.c  matrix.h  matrix.java
project2/analysis/: analysis.txt
project2/asm/: asmO0.s  asmO2.s  asmO3.s  asmOfast.s
project2/benches/: dotprod.rs
project2/llvm-IR/: dotprod.mir
project2/results_1/: results_c_O0.csv  results_c_O1.csv  results_c_O2.csv  results_c_O3.csv  results_c_Ofast.csv
project2/results_2/: results_c_O0.csv
project2/scripts/: collect_1.bat  collect_1.sh  collect_2.bat  collect_2.sh  collect_2_server.sh
project2/src/: Dotproduct.java  cudakernel.h  dot.S  dot_O2.S  dot_O3.S  dotproduct.c  dotproduct.cu  dotproduct.s  lib.rs  main.rs
project2/tests/: test_time_measure.c
project3/: CMakeLists.txt  Makefile  ascii.txt  main.c  matrix.c  matrix.h  test_1.txt  test_2.txt
project3/img/: test_3.bmp:Zone.Identifier
project3/inc/: bmp.h  color.h  error.h  math.h  pmat.h  stream.h  test.h
project3/src/: bmp.c  color.c  main.c  math.c  pmat.c  stream.c  submission_ver.c
project3/tests/: test_bmp.c  test_conv.c  test_stream.c
project4/: CMakeLists.txt  example.cpp  matrix.h  matrix.hpp  mcv.cpp  mcv.decl.h  stb_image_write.h
